# django-jovo-client

./: .dockerignore  .env.docker  .gitignore  CDC_FIX_SUMMARY.md  DOCKER_README.md  Database_Connection_Requirements.txt  Dockerfile  FINAL_STEPS.md  OPTION_A_IMPLEMENTATION_SUMMARY.md  OPTION_A_TESTING.md  Procfile.tailwind  QUICK_START_GUIDE.md  README.md  REPLICATION_REFACTOR_SUMMARY.md  TESTING_QUICKSTART.md  UI_ORCHESTRATOR_UPDATE.md  check_kafka_messages.sh  debug_replication.py  diagnose_cdc.py  docker-start.sh  main.py  manage.py  oracle_debug.py  pyproject.toml  requirements.txt  run_diagnostic.sh  test_cdc_all_tables.py
client/: encryption.py  forms.py  logging_utils.py  metrics.py  models.py  tasks.py  test_truncate_ordering.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_add_health_monitoring_fields.py  0002_alter_client_db_name.py  0002_alter_clientdatabase_db_type.py  0002_alter_replicationconfig_unique_together_and_more.py  0002_tablemapping_sync_frequency.py  0003_alter_client_email_alter_client_phone.py  0003_alter_clientdatabase_client.py  0004_clientdatabase_is_target.py  0004_delete_clientdatabase.py  0005_clientdatabase.py  0006_alter_client_db_name_alter_client_email_and_more.py  0007_encrypt_existing_passwords.py  0008_alter_client_options_alter_clientdatabase_options_and_more.py
client/models/: __init__.py  client.py  database.py  job.py  replication.py
client/replication/: __init__.py  consumer.py  health_monitor.py  orchestrator.py  validators.py
client/templatetags/: client_tags.py  table_filters.py
client/utils/: __init__.py  connector_status_cache.py  connector_templates.py  database_utils.py  date_converter.py  debezium_manager.py  debezium_snapshot.py  kafka_consumer.py  (+6 more)
debezium-setup/: Dockerfile.kafka-connect  debug_cdc.sh  docker-compose.yaml  reset_clients.sh
docs/: KAFKA_TOPIC_MANAGEMENT.md  QUICK_START_TOPICS.md  TOPIC_CREATION_BEHAVIOR.md  TOPIC_CREATION_WORKFLOW.md
edge-appliance/: fleet-console-wireframe.html  product_specs.md
jovoclient/: __init__.py  asgi.py  celery.py  settings.py  test_utils.py  urls.py  wsgi.py
templates/: _toast.html  clients_list.html  dashboard.html  index.html  monitoring_dashboard.html  replications_list.html
(+115 files in other folders)
