[project]
name = "django-jovo-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.5.3",
    "confluent-kafka>=2.12.1",
    "cookiecutter>=2.6.0",
    "django==5.2.7",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-cotton==2.1.3",
    "django-tailwind[cookiecutter,honcho,reload]==4.2.0",
    "honcho>=2.0.0",
    "kafka>=1.3.5",
    "mysqlclient==2.2.7",
    "oracledb==3.4.0",
    "psycopg2-binary==2.9.11",
    "pymysql==1.1.2",
    "python-dotenv==1.2.1",
    "redis>=7.0.1",
    "sqlalchemy==2.0.44",
]
